--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <p>"Welcome to my homepage. The page will be updated."</p>
-    <p style="background-image: url('profile.jpeg');"></p>
+  <body background="profile.jpeg">
+    <p>Welcome to my homepage. The page will be updated.</p>
 	<script src="index.js"></script>
   </body>
 </html>
